--- a/assets/app/order/order-edit/order-edit.component.html
+++ b/assets/app/order/order-edit/order-edit.component.html
@@ -1,7 +1,7 @@
 <h3>Edit Order</h3>
 <div class="form my-2">
   <div *ngIf="order" class="py-2">
-    <p class="{{types[order.type-1]}}"><span class="font-weight-bold">Code {{types[order.type-1]}}:</span> {{order.code}} <i class="fa fa-tag" *ngIf="!order.createdByServer"></i></p>
+    <p class="{{types[order.type-1]}}"><span class="font-weight-bold">Code {{types[order.type-1]}}:</span> {{order.code}} <i class="fa fa-tag" *ngIf="!order.createdByServer"></i> {{order.void? '(เสีย)' : ''}}</p>
     <p *ngIf="order.claimedBy"><span class="font-weight-bold">ชื่อ-สกุล: </span>{{order.claimedBy.firstname}} {{order.claimedBy.lastname}}</p>
     <p><span class="font-weight-bold">วันที่ (ปี-เดือน-วัน):</span> {{dateString}}</p>
     <p><span class="font-weight-bold">รหัสคอร์ส:</span> {{order.courseCode}}</p>
@@ -45,17 +45,17 @@
 
           <div class="form-group">
             <select (change)="updateForm($event)" name="type" [(ngModel)]="order.type" class="form-control" id="">
+              <option value="3">7-11</option>
               <option value="1">กรุงไทย KTB</option>
               <option value="2">ออมสิน</option>
-              <option value="3">7-11</option>
             </select>
           </div>
 
           <div class="form-group text-right">
               <button (click)="onEditOrder(f)" [disabled]="!f.form.valid || resultingOrder" class="btn btn-primary">Edit</button>
           </div>
-          <span class="invalid-feedback" *ngIf="errMessage">
-            *{{errMessage}}
+          <span class="invalid-feedback" *ngIf="errorMessage1">
+            *{{errorMessage1}}
           </span>
           <span class="invalid-feedback text-success" *ngIf="successMessage">
             *{{successMessage}}
