--- a/assets/app/student/student-search/student-search.component.html
+++ b/assets/app/student/student-search/student-search.component.html
@@ -1,4 +1,4 @@
-<div class="form my-5">
+<div class="my-3">
   <h6 class="font-weight-bold">ค้นหาเด็ก</h6>
   <div class="form-group">
     <input type="text" name="query" class="form-control"
