--- a/assets/app/order/order-list/order-list.component.html
+++ b/assets/app/order/order-list/order-list.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between">
-  <h3>Slip Page     
+  <h4>Slip Page
     <i *ngIf="loading" class="fa fa-spin fa-spinner fa-fw pl-2"></i>
-  </h3>
+  </h4>
   <i style="cursor:pointer" (click)="search = !search" class="fa fa-search fa-2x"></i>
 </div>
 <order-search *ngIf="search"></order-search>
@@ -29,8 +29,8 @@
         <td>เวลา</td>
       </tr>
     </thead>
-    <tr *ngFor="let order of orders; let i = index">
-      <td>{{i + 1}}</td>
+    <tr style="cursor:pointer" routerLink="/orders/{{order._id}}/edit" *ngFor="let order of orders; let i = index">
+      <td class="font-weight-bold">{{i + 1}}</td>
       <td class="font-weight-bold {{types[order.type-1]}}">{{types[order.type-1]}}</td>
       <td>{{order.code}}</td>
       <td>{{order.courseCode}}</td>
@@ -39,7 +39,7 @@
         <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i>
       </td>
       <td>
-        {{order.claimed? getDate(order.claimedAt): getDate(order.createdAt)}}
+        {{order.claimed? getDate(order.claimedAt): getDate(order.updatedAt)}}
       </td>
     </tr>
   </table>
