--- a/assets/app/order/order-search/order-search.component.html
+++ b/assets/app/order/order-search/order-search.component.html
@@ -1,21 +1,22 @@
-<div class="form my-5">
+<div class="my-3">
   <h6 class="font-weight-bold">ค้นหาสลิป</h6>
   <div class="form-group">
     <input type="text" name="queryCode" class="form-control"
     placeholder="confirmation code" ngModel #queryCode ="ngModel">
   </div>
   <div class="form-group">
-    <input type="date" name="queryDate" class="form-control"
-    placeholder="วันที่โอน" ngModel #queryDate="ngModel">
+    <my-date-picker [placeholder]="placeholder" [options]="myDatePickerOptions"
+                  (dateChanged)="onDateChanged($event)" required>
+    </my-date-picker>
   </div>
   <div class="form-group text-right">
-    <button (click)="searchSlip(queryCode.value, queryDate.value)" [disabled]="!queryCode.value && !queryDate.value" class="btn btn-primary">Search</button>
+    <button (click)="searchSlip(queryCode.value, date)" [disabled]="!queryCode.value && !date" class="btn btn-primary">Search</button>
   </div>
   <div *ngIf="searchSlipResults.length !== 0">
     <ul>
       <div *ngFor="let result of searchSlipResults">
         <a routerLink="/orders/{{result._id}}/edit" class="{{result.claimed? 'text-success':'text-danger'}}">
-          <p>code: {{result.code}}, วันที่โอน: {{getDate(result.date)}} <i class="fa fa-tag" *ngIf="!result.createdByServer"></i> {{result.void? '(เสีย)' : ''}}</p>
+          <p>code: {{result.code}}, วันที่โอน (วันเดือนปี): {{getDate(result.date)}} <i class="fa fa-tag" *ngIf="!result.createdByServer"></i> {{result.void? '(เสีย)' : ''}}</p>
         </a>
       </div>
     </ul>
