--- a/assets/app/student/student-show/student-show.component.html
+++ b/assets/app/student/student-show/student-show.component.html
@@ -43,28 +43,19 @@
             </span>
           </div>
 
-          <div>
-            <div class="form-group">
-              <input type="date" name="date" class="form-control"
-              placeholder="วันที่โอน" ngModel required #date="ngModel"
-              [class.is-invalid]="!date.valid && date.touched">
-              <span class="invalid-feedback" *ngIf="!date.valid && date.touched">
-                *โปรดใส่วันที่การโอน
-              </span>
-            </div>
-            <!-- <div class="form-group">
-              <input type="text" name="time" class="form-control"
-              placeholder="เวลาโอน" ngModel required #time="ngModel"
-              [class.is-invalid]="!time.valid && time.touched">
-              <span class="invalid-feedback" *ngIf="!time.valid && time.touched">
-                *โปรดใส่เวลาโอนตาม format ชั่วโมง:นาที:วินาที
-              </span>
-            </div> -->
+          <div class="form-group">
+            <my-date-picker [placeholder]="placeholder" [options]="myDatePickerOptions"
+                          (dateChanged)="onDateChanged($event)" required>
+            </my-date-picker>
+            <!-- <span class="invalid-feedback" *ngIf="!date.valid && date.touched">
+              *โปรดใส่วันที่การโอน
+            </span> -->
           </div>
         </div>
 
+
         <div class="form-group text-right">
-            <button (click)="onAddCourse(f); f.reset()" [disabled]="!f.form.valid || (type != 1 && type != 2 && type != 3)" class="btn btn-primary">Add</button>
+            <button (click)="onAddCourse(f); f.reset()" [disabled]="!f.form.valid || (type != 1 && type != 2 && type != 3) || !date" class="btn btn-primary">Add</button>
         </div>
         <span class="invalid-feedback" *ngIf="errMessage">
           *{{errMessage}}
@@ -77,12 +68,12 @@
 
   <p><span class="font-weight-bold">สรุปรายการโอน ({{student.orders.length}}):</span></p>
     <div class="card my-2" *ngFor="let order of student.orders">
-      <div class="card-header {{types[order.type-1]}}">
+      <div style="cursor:pointer" routerLink="{{authService.isAdmin()? '/orders/'+ order._id + '/edit': '/students/' + student._id}}" class="card-header {{types[order.type-1]}}">
         <h5 class="my-0 text-white">{{types[order.type-1]}}</h5>
       </div>
       <div class="card-body">
         <p><span class="font-weight-bold">Code:</span> {{order.code}}</p>
-        <p><span class="font-weight-bold">วันที่ (ปี-เดือน-วัน):</span> {{getDate(order.date)}}</p>
+        <p><span class="font-weight-bold">วันที่ (วัน-เดือน-ปี):</span> {{getDate(order.date)}}</p>
         <p><span class="font-weight-bold">รหัสคอร์ส:</span> {{order.courseCode}}</p>
         <p><span class="font-weight-bold">ราคา:</span> {{order.price}}</p>
         <p><span class="font-weight-bold">เคลม: <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i></span>
