--- a/assets/app/order/order-list/order-list.component.html
+++ b/assets/app/order/order-list/order-list.component.html
@@ -26,7 +26,7 @@
         <td>รหัสคอร์ส</td>
         <td>ราคาคอร์ส</td>
         <td>match กับระบบ</td>
-        <td>เวลา</td>
+        <td>เวลาอัพเดทล่าสุด</td>
       </tr>
     </thead>
     <tr style="cursor:pointer" routerLink="/orders/{{order._id}}/edit" *ngFor="let order of orders; let i = index">
