--- a/assets/app/student/student-add/student-add.component.html
+++ b/assets/app/student/student-add/student-add.component.html
@@ -61,7 +61,7 @@
         <select (change)="updateForm($event)" class="form-control" id="">
           <option value="1">สรุปยอด</option>
           <option value="2">ไม่ถูก match กับระบบ</option>
-          <option value="3">ไม่มา claim</option>
+          <option value="3">ไม่มายื่น slip</option>
         </select>
       </div>
       <div class="form-group">
