--- a/assets/app/student/student-show/student-show.component.html
+++ b/assets/app/student/student-show/student-show.component.html
@@ -8,9 +8,9 @@
         <div class="form-group">
           <select (change)="updateForm($event)" #selectMode class="form-control" id="">
             <option value="">เลือกรูปแบบการชำระเงิน</option>
-            <option value="3">7-11</option>
+            <option value="3">Customer Service</option>
             <option value="1">กรุงไทย KTB</option>
-            <option value="2">ออมสิน</option>
+            <option value="2">ออมสิน GSB</option>
           </select>
         </div>
 
