--- a/assets/app/student/student-list/student-list.component.html
+++ b/assets/app/student/student-list/student-list.component.html
@@ -28,7 +28,7 @@
         <td>รหัสคอร์ส</td>
         <td>ราคาคอร์ส</td>
         <td>match กับระบบ</td>
-        <td>เวลา</td>
+        <td>เวลาอัพเดทล่าสุด</td>
       </tr>
     </thead>
     <tr *ngFor="let student of students; let i = index">
