--- a/assets/app/student/student-add/student-add.component.html
+++ b/assets/app/student/student-add/student-add.component.html
@@ -65,11 +65,13 @@
         </select>
       </div>
       <div class="form-group">
+        <label>จากวันที่</label>
         <my-date-picker name="mydate1" [placeholder]="placeholder" [options]="myDatePickerOptions"
                       [(ngModel)]="model1" required>
         </my-date-picker>
       </div>
       <div class="form-group">
+        <label>ถึงวันที่</label>
         <my-date-picker name="mydate2" [placeholder]="placeholder" [options]="myDatePickerOptions"
                       [(ngModel)]="model2" required>
         </my-date-picker>
