--- a/assets/app/login/login.component.html
+++ b/assets/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="container mt-4 mb-4">
   <div class="login">
-    <h2 class="mb-3">Login</h2>
+    <div class="d-flex justify-content-between">
+      <h2 class="mb-3">Login</h2>
+    </div>
     <form #f="ngForm">
         <div class="form-group">
           <input type="text" name="username" class="form-control"
@@ -22,5 +24,8 @@
     <div class="text-right">
       <button (click)="onLoginUser(f)" class="btn btn-primary">Login</button>
     </div>
+    <span class="invalid-feedback" *ngIf="errMessage">
+      *{{errMessage}}
+    </span>
   </div>
 </div>
