--- a/assets/app/book/book-list/book-list.component.css
+++ b/assets/app/book/book-list/book-list.component.css
@@ -1,7 +1,7 @@
 .form {
   width: 75%;
-  min-width: 300px;
-  max-width: 500px;
+  min-width: 500px;
+  max-width: 750px;
   margin: 0 auto;
 }
 
@@ -13,7 +13,7 @@
   display: block;
 }
 
-.KTB {
+/* .KTB {
   color: #1BA4E1;
 }
 
@@ -23,8 +23,4 @@
 
 .CS {
   color: #FC5F20;
-}
-
-a {
-  text-decoration: none;
-}
+} */
