--- a/assets/app/header/header.component.html
+++ b/assets/app/header/header.component.html
@@ -20,6 +20,9 @@
             <a class="nav-link text-light" routerLink="/students">Students</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" routerLink="/books">Books</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" *ngIf="authService.isAdmin()" routerLink="/orders">Slips</a>
           </li>
           <li class="nav-item">
