--- a/assets/app/order/order-list/order-list.component.html
+++ b/assets/app/order/order-list/order-list.component.html
@@ -5,21 +5,30 @@
   <i style="cursor:pointer" (click)="search = !search" class="fa fa-search fa-2x"></i>
 </div>
 <order-search *ngIf="search"></order-search>
-<div class="container my-4" *ngIf="orders.length !== 0">
+<div class="container my-4">
   <div class="d-flex justify-content-between">
-    <h6 class="font-weight-bold">รายชื่อสลิปอัพเดทล่าสุด (จาก {{count}} สลิป)</h6>
+    <h6 class="font-weight-bold">รายชื่อสลิปอัพเดทล่าสุด (จาก {{orders.length}} สลิป)</h6>
     <div>
-      <select (change)="selectFilter($event)" id="">
-        <option value="">เลือกจำนวนผลลัพธ์</option>
-        <option value="100">100</option>
-        <option value="500">500</option>
-        <option value="1000">1000</option>
-        <option value="2000">2000</option>
-        <option value="3000">3000</option>
-      </select>
+      <div class="form-group d-flex">
+        <select (change)="getOrders()" class="form-control" [(ngModel)]="month">
+          <option *ngFor="let number of [0,1,2,3,4,5,6,7,8,9,10,11]" value="{{number}}">{{months[number]}}</option>
+        </select>
+        <select (change)="getOrders()" class="form-control" [(ngModel)]="year">
+          <option *ngFor="let number of [0,1,2,3,4]" value="{{getYear(number)}}">{{getYear(number)}}</option>
+        </select>
+        <select (change)="selectFilter($event)" class="form-control" id="">
+          <option value="">เลือกจำนวนผลลัพธ์</option>
+          <option value="100">100</option>
+          <option value="500">500</option>
+          <option value="1000">1000</option>
+          <option value="2000">2000</option>
+          <option value="3000">3000</option>
+        </select>
+      </div>
     </div>
   </div>
-  <table class="table my-2 text-center">
+  <div *ngIf="orders.length == 0">ยังไม่มี slip ในระบบในช่วงเวลาที่กำหนด</div>
+  <table class="table my-2 text-center" *ngIf="orders.length !== 0">
     <thead class="thead">
       <tr>
         <th rowspan>#</th>
