--- a/assets/app/student/student-show/student-show.component.html
+++ b/assets/app/student/student-show/student-show.component.html
@@ -26,31 +26,21 @@
           </div>
 
           <div class="form-group">
-            <input type="text" name="courseCode" class="form-control"
-            placeholder="รหัสคอร์ส" ngModel required #courseCode="ngModel"
-            [class.is-invalid]="!courseCode.valid && courseCode.touched">
-            <span class="invalid-feedback" *ngIf="!courseCode.valid && courseCode.touched">
-              *โปรดใส่รหัสคอร์ส
-            </span>
-          </div>
-
-          <div class="form-group">
-            <input type="number" (change)="changePrice($event)" name="price" class="form-control"
-            placeholder="ราคาคอร์ส" ngModel required #price="ngModel"
-            [class.is-invalid]="!price.valid && price.touched">
-            <span class="invalid-feedback" *ngIf="!price.valid && price.touched">
-              *โปรดใส่รหัสคอร์ส
-            </span>
-          </div>
-
-          <div class="form-group">
-            <select (change)="onSelectCourse()" *ngIf="courses.length !== 0" name="course" [(ngModel)]="course" class="form-control">
-              <option value="">โปรดเลือกคอร์ส</option>
-              <option *ngFor="let course of courses" value="{{course._id}}">{{course.title}}</option>
+            <select name="course" (change)="onSelectCourse()" *ngIf="courses.length !== 0" [(ngModel)]="course" class="form-control">
+              <option value="0">เลือกรหัสคอร์ส</option>
+              <option *ngFor="let course of courses" value="{{course._id}}">{{course.code}} - {{course.title}}</option>
             </select>
           </div>
 
-          <div class="form-group" *ngIf="course && books.length >= 1">
+          <!-- <div class="form-group">
+            <input type="number" name="price" class="form-control"
+            placeholder="ราคาคอร์ส" [(ngModel)]="price">
+            <span class="invalid-feedback" *ngIf="!price">
+              *โปรดใส่ราคาคอร์ส
+            </span>
+          </div> -->
+
+          <div class="form-group" *ngIf="type && course && books.length >= 1">
             <p>โปรดเลือกหนังสือ {{getCourse(course).numBook}} รายการ</p>
             <div *ngFor="let book of books">
               <input (change)="onSelectBooks($event)" type="checkbox" value="{{book._id}}"
