--- a/assets/app/setting/setting.component.html
+++ b/assets/app/setting/setting.component.html
@@ -2,8 +2,9 @@
   <div class="d-flex justify-content-between">
     <h5>การตั้งค่าระบบ (Settings)</h5>
     <div>
-      <a routerLink="/settings/courses">Courses</a> | 
-      <a routerLink="/settings/users">Users</a>
+      <a routerLink="/settings/groups">สรุป</a> |
+      <a routerLink="/settings/courses">คอร์ส</a> |
+      <a routerLink="/settings/books">หนังสือ</a>
     </div>
   </div>
   <router-outlet></router-outlet>
