--- a/assets/app/order/order-edit/order-edit.component.html
+++ b/assets/app/order/order-edit/order-edit.component.html
@@ -42,6 +42,7 @@
               <option value="3">Counter Service</option>
               <option value="1">กรุงไทย KTB</option>
               <option value="2">ออมสิน GSB</option>
+              <option value="4">บัตร KTC</option>
             </select>
           </div>
 
@@ -56,7 +57,7 @@
           </span>
       </form>
     </div>
-    <div *ngIf="order.course">
+    <div *ngIf="order.group">
       <hr>
       <!-- <p class="font-weight-bold">รายละเอียดการสมัคร</p> -->
       <p><span class="font-weight-bold"> คอร์ส:</span> {{order.course.title}}</p>
