--- a/assets/app/setting/setting-course-edit/setting-course-edit.component.html
+++ b/assets/app/setting/setting-course-edit/setting-course-edit.component.html
@@ -1,22 +1,34 @@
 <div class="container my-4">
   <div *ngIf="course">
     <form #f="ngForm">
-      <h6 class="font-weight-bold">แก้ไข {{course.title}}</h6>
-
-      <div class="form-group">
-        <label>ราคา: </label>
-        <input type="number" name="price" class="form-control"
-        placeholder="ราคาคอร์ส" [(ngModel)]="course.price">
+      <div class="d-flex justify-content-between">
+        <h6 class="font-weight-bold">{{course.title}}</h6>
+        <a class="text-primary" style="cursor:pointer" (click)="showEdit = !showEdit">{{showEdit? 'Hide':'Edit'}}</a>
       </div>
+      <p><span class="font-weight-bold">หนังสือที่เลือกได้:</span> {{course.numBook}} เล่ม</p>
+      <div *ngIf="showEdit">
+        <div class="form-group">
+          <label class="font-weight-bold">ชื่อคอร์ส: </label>
+          <input type="text" name="price" class="form-control"
+          placeholder="ราคาคอร์ส" [(ngModel)]="ngCourse.title">
+        </div>
 
-      <div class="form-group">
-        <label>จำนวนหนังสือที่เลือกได้: </label>
-        <input type="number" name="numBook" class="form-control"
-        placeholder="จำนวนหนังสือ" [(ngModel)]="course.numBook">
-      </div>
+        <div class="form-group">
+          <label class="font-weight-bold">จำนวนหนังสือที่เลือกได้: </label>
+          <input type="number" name="numBook" class="form-control"
+          placeholder="จำนวนหนังสือ" [(ngModel)]="ngCourse.numBook">
+        </div>
 
-      <div class="text-right">
-        <button (click)="onEditCourse()" class="btn btn-primary" [disabled]="course.numBook > course.books.length || course.numBook < 0 || course.numBook == null">Edit</button>
+        <div class="form-group">
+          <div>
+            <input type="checkbox" name="strict" [(ngModel)]="ngCourse.strict">
+            <label>หนังสือที่เลือกต้องตรงตามจำนวนดังกล่าวเท่านั้น</label>
+          </div>
+        </div>
+
+        <div class="text-right">
+          <button (click)="onEditCourse()" class="btn btn-primary" [disabled]="ngCourse.numBook > course.books.length || ngCourse.numBook < 0 || ngCourse.numBook == null">Edit</button>
+        </div>
       </div>
 
       <div class="form-group my-4">
