--- a/assets/app/setting/setting-course/setting-course.component.html
+++ b/assets/app/setting/setting-course/setting-course.component.html
@@ -1,14 +1,36 @@
 <div class="container my-4">
-  <label>รูปแบบการโอนทั้งหมด</label>
-  <div *ngFor="let course of courses">
-    <div class="d-flex justify-content-between">
-      <p><span class="font-weight-bold bootstrap">{{course.title}}</span> - {{course.price}} บาท
-      </p>
-      <a routerLink="/settings/courses/{{course._id}}/edit" class="text-primary pl-4"> Edit
-      </a>
-    </div>
-    <div *ngFor="let book of course.books">
-      <ul class="pl-4"><i class="fa fa-arrow-right" aria-hidden="true"></i> {{book.title}}</ul>
+  <div class="jumbotron py-2">
+    <label class="my-0 font-weight-bold"><i class="fa fa-check-circle text-success"></i> คอร์สทั้งหมด</label>
+  </div>
+  <div class="text-right">
+    <i (click)="addCourse = !addCourse" *ngIf="!addCourse" style="cursor: pointer" class="fa fa-plus fa-2x"></i>
+    <i (click)="addCourse = !addCourse" *ngIf="addCourse" style="cursor: pointer" class="fa fa-times"></i>
+  </div>
+  <div *ngIf="addCourse" class="form-group">
+    <label>เพิ่มคอร์ส</label>
+    <form #f = "ngForm">
+      <div class="form-group">
+        <input type="text" placeholder="ชื่อคอร์ส" name="title" class="form-control" required ngModel #title="ngModel"
+        [class.is-invalid]="!title.valid && title.touched">
+      </div>
+      <div class="form-group">
+        <input type="number" placeholder="จำนวนหนังสือที่เลือกได้" name="numBook" class="form-control" required ngModel #numBook="ngModel"
+        [class.is-invalid]="!numBook.valid && numBook.touched">
+      </div>
+      <div class="text-right my-2">
+        <button [disabled]="!f.form.valid" (click)="onAddCourse(f)" class="btn btn-primary">เพิ่ม</button>
+      </div>
+    </form>
+  </div>
+  <div class="container">
+    <div *ngFor="let course of courses; let i = index">
+      <div class="d-flex justify-content-between">
+        <h6 style="cursor:pointer" routerLink="/settings/courses/{{course._id}}/edit"><span class="font-weight-bold bootstrap">{{course.title}}</span>
+        </h6>
+      </div>
+      <div *ngFor="let book of course.books">
+        <ul class="pl-4"><i class="fa fa-arrow-right" aria-hidden="true"></i> {{book.title}}</ul>
+      </div>
     </div>
   </div>
 </div>
